--- a/static/acylx.css
+++ b/static/acylx.css
@@ -1,1 +1,199 @@
-a{color:white;text-decoration:none;}.header-bar{height:185px;display:flex;justify-content:center;}.header-bar header{line-height:30%;text-align:left;padding:2rem;background-color:#fda925;padding-left:5%;padding-right:5%;color:#333;}.header-bar header a{color:#333;}.header-bar header hr{color:#333;}.header-bar header h1{font-family:corporation-games;}.header-bar header .subtitle{font-family:chakrapetch-regular;font-size:1.5em;font-weight:bold;}.header-bar nav{padding-left:8%;padding:1%;padding-right:15%;background-color:#3f636b;color:black;font-family:chakrapetch-regular;display:flex;align-items:strech;gap:5%;}body{margin:0;background-color:#e6ebe4;font-family:chakrapetch-regular;}.container{padding:5%;padding-right:0%;background-color:#67adb1;clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 25%, 75% 0);flex-shrink:0;}.container b{font-size:1.5em;padding-right:1em;}.container .content{padding-left:5%;margin-right:1em;padding-top:5%;display:flex;flex-direction:row;flex-wrap:wrap;align-items:flex-start;}.container .content button{margin-bottom:5%;flex-basis:90px;margin-right:5%;width:100%;}.container .content a{width:100%;flex-basis:90px;}button{background-color:#cfdfd8;text-decoration:none;border:none;text-align:left;padding:1.5%;}.abme{padding:20px;margin:20%;margin-bottom:10%;margin-top:3%;background-color:#67adb1;clip-path: polygon(0% 0%, 15% 0%, 20% 23%, 100% 23%, 100% 100%, 0% 100%);}.abme b{font-size:1.5em;}.abme p{padding-left:5%;}.abme .link{text-align:right;padding-top:2%;}.abme .link a{clip-path: polygon(0 45%, 40% 0, 100% 0, 100% 100%, 0 100%);color:white;padding:2%;margin-right:-3%;text-decoration:none;background-color:#fda925;}.bg{writing-mode:vertical-rl;color:#ccc;font-size:150px;font-weight:bold;position:absolute;top:1%;z-index:-1;left:0%;font-family:starbirl;white-space:nowrap;}
+a{
+    color: white;
+    text-decoration: none;
+}
+
+.header-bar{
+    height: 185px;
+    display: flex;
+    justify-content: center;
+}
+
+.header-bar header{
+    line-height: 30%;
+    text-align: left;
+    padding: 2rem;
+    background-color: #fda925;
+    padding-left: 5%;
+    padding-right: 5%;
+    color: #333;
+}
+
+.header-bar header a{
+    color: #333;
+}
+
+.header-bar header hr{
+    color: #333;
+}
+
+.header-bar header h1{
+    font-family: corporation-games;
+}
+
+.header-bar header .subtitle{
+    font-family: chakrapetch-regular;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.header-bar nav{
+    padding-left: 8%;
+    padding: 1%;
+    padding-right: 15%;
+    background-color: #3f636b;
+    color: black;
+    font-family: chakrapetch-regular;
+    display: flex;
+    align-items: strech;
+    gap: 5%;
+}
+
+body{
+    margin: 0;
+    background-color: #e6ebe4;
+    font-family: chakrapetch-regular;
+}
+
+body main{
+    z-index: 1;
+    position: relative;
+    padding: 20px;
+    border-radius: 8%;
+    margin: 20%;
+    margin-top: 5%;
+    display: grid;
+    grid-template-columns:  0.4fr 1fr;
+    grid-template-rows:  0.3fr 1fr;
+    background-color: white;
+    gap:  5% 0px;
+    grid-auto-flow: row;
+	grid-template-areas:
+      "title ."
+      "meta content";
+}
+
+body main .meta{
+    margin-left: 15%;
+    padding: 10%;
+    color: white;
+    padding-top: 30%;
+    grid-area: meta;
+    background-color: #322918;
+    clip-path:  polygon(0 55px, 40% 0, 100% 0, 100% 100%, 80px 100%, 0% 95%);
+}
+
+body main .meta a{
+    color: white;
+    text-decoration: none;
+}
+
+body main .meta ul{
+    margin-top: 0;
+}
+
+body main .content{
+    padding: 10%;
+    gap: 0 2%;
+    margin: 0;
+    grid-area: content;
+    background-color: #fd7e22;
+    clip-path:  polygon(0 0, 80% 0, 80% 50px, 90% 100px, 85% 100px, 100% 100px, 100% 90%, 80% 100%, 0 100%);
+    border-radius: 0;
+    grid-template-columns: 50%;
+}
+
+body main .title{
+    padding-left: 10%;
+    margin-right: 20%;
+    background-color: #abd022;
+    grid-area: title;
+    clip-path: polygon(0 0, 60% 0, 100% 100%, 0% 100%);
+}
+
+.container{
+    padding: 0.8em;
+    padding-right: 0;
+    background-color: #67adb1;
+    clip-path:  polygon(0 0, 0 100%, 100% 100%, 100% 25%, 75% 0);
+    flex-shrink: 0;
+}
+
+.container b{
+    font-size: 1.5em;
+    padding-right: 1em;
+}
+
+.container .content{
+    padding-left: 0.5em;
+    margin-right: 1em;
+    padding-top: 0.5em;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.container .content button{
+    margin-bottom: 5%;
+    flex-basis: 90px;
+    margin-right: 5%;
+    width: 100%;
+}
+
+.container .content a{
+    width: 100%;
+    flex-basis: 90px;
+}
+
+button{
+    background-color: #cfdfd8;
+    text-decoration: none;
+    border: none;
+    text-align: left;
+    padding: 1.5%;
+}
+
+.abme{
+    padding: 20px;
+    margin: 20%;
+    margin-bottom: 10%;
+    margin-top: 3%;
+    background-color: #67adb1;
+    clip-path:  polygon(0% 0%, 15% 0%, 20% 23%, 100% 23%, 100% 100%, 0% 100%);
+}
+
+.abme b{
+    font-size: 1.5em;
+}
+
+.abme p{
+    padding-left: 5%;
+}
+
+.abme .link{
+    text-align: right;
+    padding-top: 2%;
+}
+
+.abme .link a{
+    clip-path:  polygon(0 45%, 40% 0, 100% 0, 100% 100%, 0 100%);
+    color: white;
+    padding: 2%;
+    margin-right: -3%;
+    text-decoration: none;
+    background-color: #fda925;
+}
+
+.bg{
+    writing-mode: vertical-rl;
+    color: #ccc;
+    font-size: 150px;
+    font-weight: bold;
+    position: absolute;
+    top: 1%;
+    z-index: -1;
+    left: 0%;
+    font-family: starbirl;
+    white-space: nowrap;
+}
